Fixes partners on mobile

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -147,7 +147,6 @@
     &:last-child {
       background-color: $accent-primary;
       border-bottom: 1px solid $accent-primary;
-      border-right: 1px solid $accent-primary;
 
       &:hover {
         border-bottom: 1px solid $background-secondary;
